# vk-NAPI-Example

./: .gitignore  README.md
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
entry/src/main/cpp/include/: cout_redirect.h  nativeStreamBuf.h
entry/src/main/cpp/types/libentry/: Index.d.ts
entry/src/main/ets/pages/: Index.ets
